# jsonpath-rust-bindings

./: Cargo.toml  PKG-INFO  README.md  jsonpath_rust_bindings.pyi  pyproject.toml
.github/workflows/: CI.yml  test.yml
.github/workflows/workflows/: CI.yml
github/workflows/: test.yml
src/: lib.rs
tests/: test_bindings.py
