[package]
name = "jsonpath_rust_bindings"
version = "1.1.0"
edition = "2021"

[lib]
name = "jsonpath_rust_bindings"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
strip = true
codegen-units = 1
debug = false

[profile.dev]
opt-level = 1
debug = true

[dependencies]
pyo3 = { version = "0.26.0", features = ["extension-module"] }
jsonpath-rust = "1.0.4"
serde_json = "1.0"
pythonize = "0.26.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc = "0.1.48"

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = "0.5.4"
